# attentional-foraging

./: .gitignore  .gitmodules  CHANGELOG.md  CITATION.cff  CLAUDE.md  DEPLOY.md  README.md  TODO.md  early_predictors.ipynb  index.html  p004-b2-t4.html  p007-b6-t8.html  p009-b1-t3.html  p010-b4-t7.html  p011-b3-t2.html  p013-b2-t3.html  p014-b6-t8.html  p016-b3-t1.html  p017-b3-t3.html  p019-b6-t5.html  p020-b6-t10.html  p020-b6-t5.html  p021-b2-t10.html  p021-b5-t8.html  p021-b6-t2.html  p024-b3-t5.html  p024-b5-t5.html  p026-b4-t9.html  p027-b3-t6.html  p029-b2-t10.html  p031-b3-t9.html  p031-b4-t5.html  p031-b5-t2.html  p032-b4-t9.html  p032-b6-t8.html  p034-b2-t3.html  p035-b1-t8.html  p035-b4-t1.html  p035-b4-t2.html  p037-b2-t5.html  (+12 more)
docs/: ad-utility-prior.md  adserp-key-claims.md  adsight-key-claims.md  audit-external-resources.md  backlog-live-resources.md  backlog-margin-plan-events.md  findings-approach-retreat.md  findings.md  journey.md  lit-review-scroll-regressions.md  methodological-threats.md  metrics-reference.md  notebook-key-claims.md  notebook-strategy.md  plan-demo-fix.md  priming-null-result.md  regression-lit-review.md  schul-lewandowski-2019.md  serp-structure-survey.md  survey-phase-vs-ads-followup-1-first-saccade-direction.md  survey-phase-vs-ads-followup-2-visual-controls.md  survey-phase-vs-ads-followup-3-bimodality.md  survey-phase-vs-ads-followup-4-gaze-cursor-lag.md  survey-phase-vs-ads.md
explainer/: fixation-data.json  index.html
fixation-anchors/: p004-b2-t4.json  p007-b6-t8.json  p010-b4-t7.json  p011-b3-t2.json  p013-b2-t3.json  (+26 more)
(+8944 files in other folders)
